<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_expense"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add_expense"
        android:shortcutShortLabel="@string/shortcut_add_expense_short"
        android:shortcutLongLabel="@string/shortcut_add_expense_long">
        <intent
            android:action="io.pm.finlight.ACTION_ADD_EXPENSE"
            android:targetPackage="io.pm.finlight"
            android:targetClass="io.pm.finlight.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="add_income"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add_income"
        android:shortcutShortLabel="@string/shortcut_add_income_short"
        android:shortcutLongLabel="@string/shortcut_add_income_long">
        <intent
            android:action="io.pm.finlight.ACTION_ADD_INCOME"
            android:targetPackage="io.pm.finlight"
            android:targetClass="io.pm.finlight.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="io.pm.finlight.ACTION_SEARCH"
            android:targetPackage="io.pm.finlight"
            android:targetClass="io.pm.finlight.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
